created navbar links and toggle button for nav bar

--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Nimbus</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>
             <h1>NIMBUS</h1>
             <nav>
+                <a id="nav-toggle" href="">
+                    <span class="nav-bar"></span>
+                    <span class="nav-bar"></span>
+                    <span class="nav-bar"></span>
+                </a>
                 <ul>
                     <li><a href=""></a>Teams</li>
                     <li><a href=""></a>Enterprise</li>
