changed link text and title structure

--- a/index.html
+++ b/index.html
@@ -5,21 +5,22 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Nimbus</title>
         <link rel="stylesheet" href="style.css">
+        <script src="script.js"></script>
     </head>
     <body>
         <header>
-            <h1>NIMBUS</h1>
+            <h1 id="nimbus-title">NIMBUS</h1>
             <nav>
                 <a id="nav-toggle" href="">
                     <span class="nav-bar"></span>
                     <span class="nav-bar"></span>
                     <span class="nav-bar"></span>
                 </a>
-                <ul>
-                    <li><a href=""></a>Teams</li>
-                    <li><a href=""></a>Enterprise</li>
-                    <li><a href=""></a>Pricing</li>
-                    <li><a href=""></a>Help Center</li>
+                <ul id="nav-links">
+                    <li><a href="">Teams</a></li>
+                    <li><a href="">Enterprise</a></li>
+                    <li><a href="">Pricing</a></li>
+                    <li><a href="">Help Center</a></li>
                 </ul>
             </nav>
         </header>
