added class names to home page sections

--- a/index.html
+++ b/index.html
@@ -30,31 +30,31 @@
                 <h3>Nimbus keeps your documents secure so you can store, collab, and share whenever and wherever you are.</h3>
                 <button>Get started</button>
             </section>
-            <section>
+            <section class="home-sections">
                 <h2>Unlimited Storage to meet your needs</h2>
             </section>
-            <section>
+            <section class="home-sections">
                 <h2>Share & collaborate with your team</h2>
             </section>
-            <section>
+            <section class="home-sections">
                 <h2>Real-time file syncing</h2>
             </section>
-            <section>
+            <section class="home-sections">
                 <h2>Access your files from any device</h2>
             </section>
-            <section>
+            <section class="home-sections">
                 <h2>Bank-grade encryption</h2>
             </section>
-            <section>
+            <section class="home-sections">
                 <h3>As seen on:</h3>
             </section>
-            <section>
+            <section class="home-sections">
                 <h2>Testimonials</h2>
             </section>
-            <section>
+            <section class="home-sections">
                 <h3>Get the app</h3>
             </section>
-            <section>
+            <section class="home-sections">
                 <h2>Join the Nimbus cloud today and soar to new heights.</h2>
                 <button>Sign Up Now</button>
             </section>
