added dots to home sections

--- a/index.html
+++ b/index.html
@@ -34,25 +34,50 @@
                 <h3>Nimbus keeps your documents secure so you can store, collab, and share whenever and wherever you are.</h3>
                 <button>Get started</button>
             </section>
+            <div class="dot-separator">
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+            </div>
             <section class="home-sections">
-                <h2>Unlimited Storage to meet your needs</h2>
+                <h2>Unlimited storage to meet your needs</h2>
             </section>
+            <div class="dot-separator">
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+            </div>
             <section class="home-sections">
                 <h2>Share & collaborate with your team</h2>
             </section>
+            <div class="dot-separator">
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+            </div>
             <section class="home-sections">
                 <h2>Real-time file syncing</h2>
             </section>
+            <div class="dot-separator">
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+            </div>
             <section class="home-sections">
                 <h2>Access your files from any device</h2>
             </section>
+            <div class="dot-separator">
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+            </div>
             <section class="home-sections">
                 <h2>Bank-grade encryption</h2>
             </section>
-            <section class="home-sections">
-                <h3>As seen on:</h3>
+            <section class="home-sections" id="as-seen-on">
+                <h3>AS SEEN ON:</h3>
             </section>
-            <section class="home-sections">
+            <section class="home-sections" id="testimonial-section">
                 <h2>Testimonials</h2>
             </section>
             <section class="home-sections">
