--- a/index.html
+++ b/index.html
@@ -75,17 +75,17 @@
                 <h2>Bank-grade encryption</h2>
             </section>
             <section class="home-sections" id="as-seen-on">
-                <h3>AS SEEN ON:</h3>
+                <h3>AS SEEN ON</h3>
             </section>
             <section class="home-sections" id="testimonial-section">
                 <h2>Testimonials</h2>
             </section>
-            <section class="home-sections">
-                <h3>Get the app</h3>
+            <section class="home-sections" id="get-app">
+                <h3>GET THE APP</h3>
             </section>
-            <section class="home-sections">
+            <section class="home-sections" id="cta-section">
                 <h2>Join the Nimbus cloud today and soar to new heights.</h2>
-                <button>Sign Up Now</button>
+                <button id="cta-btn">Sign Up Now</button>
             </section>
         </main>
         <footer>
