--- a/index.html
+++ b/index.html
@@ -89,7 +89,27 @@
             </section>
         </main>
         <footer>
-
+            <div>
+                <h4>Teams</h4>
+                <a href="">Sales</a>
+                <a href="">Marketing</a>
+                <a href="">HR</a>
+            </div>
+            <div>
+                <h4>Products</h4>
+                <a href="">Standard</a>
+                <a href="">Professional</a>
+                <a href="">Business</a>
+                <a href="">Business Plus</a>
+                <a href="">Enterprise</a>
+            </div>
+            <div>
+                <h4>Company</h4>
+                <a href="">About</a>
+                <a href="">Contact Us</a>
+                <a href="">Privacy & terms</a>
+                <a href="">Cookie policy</a>
+            </div>
         </footer>
     </body>
 </html>
