added class names to footer divs

--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
             </section>
         </main>
         <footer>
-            <div>
+            <div class="footer-section">
                 <h4>Teams</h4>
                 <a href="">Sales</a>
                 <a href="">Marketing</a>
                 <a href="">HR</a>
             </div>
-            <div>
+            <div class="footer-section">
                 <h4>Products</h4>
                 <a href="">Standard</a>
                 <a href="">Professional</a>
@@ -103,7 +103,7 @@
                 <a href="">Business Plus</a>
                 <a href="">Enterprise</a>
             </div>
-            <div>
+            <div class="footer-section">
                 <h4>Company</h4>
                 <a href="">About</a>
                 <a href="">Contact Us</a>
