added submenu to navigation

--- a/index.html
+++ b/index.html
@@ -21,7 +21,14 @@
                     <span class="nav-bar"></span>
                 </a>
                 <ul id="nav-links">
-                    <li><a href="">Teams</a></li>
+                    <li>
+                        <a id="nav-teams-title">Teams</a>
+                        <ul id="nav-teams-list">
+                            <li><a href="" class="nav-teams-link">Sales</a></li>
+                            <li><a href="" class="nav-teams-link">Marketing</a></li>
+                            <li><a href="" class="nav-teams-link">HR</a></li>
+                        </ul>
+                    </li>
                     <li><a href="">Enterprise</a></li>
                     <li><a href="">Pricing</a></li>
                     <li><a href="">Help Center</a></li>
