--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         </ul>
                     </li>
                     <li><a href="">Enterprise</a></li>
-                    <li><a href="">Pricing</a></li>
+                    <li><a href="pricing.html">Pricing</a></li>
                     <li><a href="">Help Center</a></li>
                 </ul>
             </nav>
