created pricing page greeting and monthly/yearly pricing buttons

--- a/pricing.html
+++ b/pricing.html
@@ -11,7 +11,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
     </head>
-    <header>
+    <body>
+        <header>
         <h1 id="nimbus-title">NIMBUS</h1>
         <nav>
             <a id="nav-toggle" href="">
@@ -34,7 +35,14 @@
             </ul>
         </nav>
     </header>
-    <body>
-        
+        <div id="pricing-container">
+            <h2 id="pricing-title">Choose the best plan to fit your needs.</h2>
+            <h3 id="pricing-paragraph">Simple plans designed for everyone — from freelancers to enterprises. No hidden fees. Bank-grade protection.</h3>
+            <div id="pricing-type">
+                <p id="pricing-billing-label">Billed:</p>
+                <button class="pricing-btn monthly-pricing-btn">Monthly</button>
+                <button class="pricing-btn yearly-pricing-btn">Yearly</button>
+            </div>
+        </div>
     </body>
 </html>
