made website title a link to home page

--- a/pricing.html
+++ b/pricing.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <header>
-        <h1 id="nimbus-title">NIMBUS</h1>
+        <h1 id="nimbus-title"><a href="index.html" id="nimbus-title-link">NIMBUS</a></h1>
         <nav>
             <a id="nav-toggle" href="">
                 <span class="nav-bar"></span>
