created pricing cards for each product

--- a/pricing.html
+++ b/pricing.html
@@ -37,12 +37,29 @@
     </header>
         <div id="pricing-container">
             <h2 id="pricing-title">Choose the best plan to fit your needs.</h2>
-            <h3 id="pricing-paragraph">Simple plans designed for everyone — from freelancers to enterprises. No hidden fees. Bank-grade protection.</h3>
+            <p id="pricing-paragraph">Simple plans designed for everyone — from freelancers to enterprises. No hidden fees. Bank-grade protection.</p>
             <div id="pricing-type">
                 <p id="pricing-billing-label">Billed:</p>
                 <button class="pricing-btn monthly-pricing-btn">Monthly</button>
                 <button class="pricing-btn yearly-pricing-btn">Yearly</button>
             </div>
+            <main>
+                <section class="pricing-card">
+                    <h3 class="pricing-plan-title">Standard</h3>
+                    <ul class="pricing-features-list">
+                        <li><span class="bullet"></span>Lorem ipsum det, consecteturing elit.</li>
+                        <li><span class="bullet"></span>Lorecing elit.</li>
+                        <li><span class="bullet"></span>Lorem ipsum dolor sit amcing elit.</li>
+                        <li><span class="bullet"></span>r sit amet, pising elit.</li>
+                        <li><span class="bullet"></span>Lor ametur adipising elit.</li>
+                        <li><span class="bullet"></span>Lorem ipsum dolorctetuiscng elit.</li>
+                    </ul>
+                    <p class="pricing-amt">$7.99/month</p>
+                    <div class="pricing-btn-container">
+                        <button class="pricing-btn-confirm">Get Plan</button>
+                    </div>
+                </section>
+            </main>
         </div>
     </body>
 </html>
