added footer to pricing page

--- a/pricing.html
+++ b/pricing.html
@@ -54,12 +54,35 @@
                         <li><span class="bullet"></span>Lor ametur adipising elit.</li>
                         <li><span class="bullet"></span>Lorem ipsum dolorctetuiscng elit.</li>
                     </ul>
-                    <p class="pricing-amt">$7.99/month</p>
+                    <p class="pricing-amt">$7.99 / month</p>
                     <div class="pricing-btn-container">
                         <button class="pricing-btn-confirm">Get Plan</button>
                     </div>
                 </section>
             </main>
         </div>
+        <footer>
+            <div class="footer-section">
+                <h4>Teams</h4>
+                <a href="">Sales</a>
+                <a href="">Marketing</a>
+                <a href="">HR</a>
+            </div>
+            <div class="footer-section">
+                <h4>Products</h4>
+                <a href="">Standard</a>
+                <a href="">Professional</a>
+                <a href="">Business</a>
+                <a href="">Business Plus</a>
+                <a href="">Enterprise</a>
+            </div>
+            <div class="footer-section">
+                <h4>Company</h4>
+                <a href="">About</a>
+                <a href="">Contact Us</a>
+                <a href="">Privacy & terms</a>
+                <a href="">Cookie policy</a>
+            </div>
+        </footer>
     </body>
 </html>
