added additional pricing cards

--- a/pricing.html
+++ b/pricing.html
@@ -59,6 +59,51 @@
                         <button class="pricing-btn-confirm">Get Plan</button>
                     </div>
                 </section>
+                <section class="pricing-card">
+                    <h3 class="pricing-plan-title">Professional</h3>
+                    <ul class="pricing-features-list">
+                        <li><span class="bullet"></span>Lorem ipsum det, consecteturing elit.</li>
+                        <li><span class="bullet"></span>Lorecing elit.</li>
+                        <li><span class="bullet"></span>Lorem ipsum dolor sit amcing elit.</li>
+                        <li><span class="bullet"></span>r sit amet, pising elit.</li>
+                        <li><span class="bullet"></span>Lor ametur adipising elit.</li>
+                        <li><span class="bullet"></span>Lorem ipsum dolorctetuiscng elit.</li>
+                    </ul>
+                    <p class="pricing-amt">$12.99 / month</p>
+                    <div class="pricing-btn-container">
+                        <button class="pricing-btn-confirm">Get Plan</button>
+                    </div>
+                </section>
+                <section class="pricing-card">
+                    <h3 class="pricing-plan-title">Business</h3>
+                    <ul class="pricing-features-list">
+                        <li><span class="bullet"></span>Lorem ipsum det, consecteturing elit.</li>
+                        <li><span class="bullet"></span>Lorecing elit.</li>
+                        <li><span class="bullet"></span>Lorem ipsum dolor sit amcing elit.</li>
+                        <li><span class="bullet"></span>r sit amet, pising elit.</li>
+                        <li><span class="bullet"></span>Lor ametur adipising elit.</li>
+                        <li><span class="bullet"></span>Lorem ipsum dolorctetuiscng elit.</li>
+                    </ul>
+                    <p class="pricing-amt">$16.99 / month</p>
+                    <div class="pricing-btn-container">
+                        <button class="pricing-btn-confirm">Get Plan</button>
+                    </div>
+                </section>
+                <section class="pricing-card">
+                    <h3 class="pricing-plan-title">Business Plus</h3>
+                    <ul class="pricing-features-list">
+                        <li><span class="bullet"></span>Lorem ipsum det, consecteturing elit.</li>
+                        <li><span class="bullet"></span>Lorecing elit.</li>
+                        <li><span class="bullet"></span>Lorem ipsum dolor sit amcing elit.</li>
+                        <li><span class="bullet"></span>r sit amet, pising elit.</li>
+                        <li><span class="bullet"></span>Lor ametur adipising elit.</li>
+                        <li><span class="bullet"></span>Lorem ipsum dolorctetuiscng elit.</li>
+                    </ul>
+                    <p class="pricing-amt">$19.99 / month</p>
+                    <div class="pricing-btn-container">
+                        <button class="pricing-btn-confirm">Get Plan</button>
+                    </div>
+                </section>
             </main>
         </div>
         <footer>
