removed pricing text from pricing amt tag since javascript will take care of it

--- a/pricing.html
+++ b/pricing.html
@@ -54,7 +54,7 @@
                         <li><span class="bullet"></span>Lor ametur adipising elit.</li>
                         <li><span class="bullet"></span>Lorem ipsum dolorctetuiscng elit.</li>
                     </ul>
-                    <p class="pricing-amt">$7.99 / month</p>
+                    <p class="pricing-amt"></p>
                     <div class="pricing-btn-container">
                         <button class="pricing-btn-confirm">Get Plan</button>
                     </div>
@@ -69,7 +69,7 @@
                         <li><span class="bullet"></span>Lor ametur adipising elit.</li>
                         <li><span class="bullet"></span>Lorem ipsum dolorctetuiscng elit.</li>
                     </ul>
-                    <p class="pricing-amt">$12.99 / month</p>
+                    <p class="pricing-amt"></p>
                     <div class="pricing-btn-container">
                         <button class="pricing-btn-confirm">Get Plan</button>
                     </div>
@@ -84,7 +84,7 @@
                         <li><span class="bullet"></span>Lor ametur adipising elit.</li>
                         <li><span class="bullet"></span>Lorem ipsum dolorctetuiscng elit.</li>
                     </ul>
-                    <p class="pricing-amt">$16.99 / month</p>
+                    <p class="pricing-amt"></p>
                     <div class="pricing-btn-container">
                         <button class="pricing-btn-confirm">Get Plan</button>
                     </div>
@@ -99,7 +99,7 @@
                         <li><span class="bullet"></span>Lor ametur adipising elit.</li>
                         <li><span class="bullet"></span>Lorem ipsum dolorctetuiscng elit.</li>
                     </ul>
-                    <p class="pricing-amt">$19.99 / month</p>
+                    <p class="pricing-amt"></p>
                     <div class="pricing-btn-container">
                         <button class="pricing-btn-confirm">Get Plan</button>
                     </div>
