added discount text and styled to yearly pricing

--- a/pricing.html
+++ b/pricing.html
@@ -36,14 +36,17 @@
         </nav>
     </header>
         <div id="pricing-container">
-            <h2 id="pricing-title">Choose the best plan to fit your needs.</h2>
+            <h2 id="pricing-title">Choose the best plan to fit your needs</h2>
             <p id="pricing-paragraph">Simple plans designed for everyone — from freelancers to enterprises. No hidden fees. Bank-grade protection.</p>
             <div id="pricing-type">
                 <p id="pricing-billing-label">Billed:</p>
                 <button class="pricing-btn monthly-pricing-btn">Monthly</button>
-                <button class="pricing-btn yearly-pricing-btn">Yearly</button>
+                <div>
+                    <button class="pricing-btn yearly-pricing-btn">Yearly</button>
+                    <p id="pricing-discount">12% off</p>
+                </div>
             </div>
-            <main>
+            <main id="card-section">
                 <section class="pricing-card">
                     <h3 class="pricing-plan-title">Standard</h3>
                     <ul class="pricing-features-list">
