added footer and all sections

--- a/sales.html
+++ b/sales.html
@@ -36,12 +36,52 @@
             </nav>
         </header>
         <main class="teams-container">
-            <div class="banner-card">
+            <section class="banner-card">
                 <h2 class="banner-title">Nimbus gives your sales team the tools to track leads, collaborate seamlessly, and close deals efficiently</h2>
                 <h3 class="banner-title-2">Nimbus helps your sales team work smarter—not harder. Get real-time insights, improve collaboration, and watch your deals move faster than ever.</h3>
                 <button class="contact-sales-btn">Contact sales</button>
-            </div>
-            
+            </section>
+            <section class="team-feature-container">
+                <div class="team-feature-card">
+                    <h4 class="team-feature-title">Lead Management & Tracking</h4>
+                    <p class="team-feature-desc">Keep every lead in one place. Track progress, set follow-ups, and never let an opportunity slip through the cracks. Sales reps spend less time hunting for info and more time closing deals.</p>
+                </div>
+                <div class="team-feature-card">
+                    <h4 class="team-feature-title">Collaboration & Team Communication</h4>
+                    <p class="team-feature-desc">Collaborate in real-time. Share insights, assign tasks, and make sure your team is always on the same page.</p>
+                </div>
+                <div class="team-feature-card">
+                    <h4 class="team-feature-title">Analytics & Performance Insights</h4>
+                    <p class="team-feature-desc">Measure what matters. Analyze performance, spot trends, and make data-driven decisions to close more deals. Lets managers and teams know what's working and what needs improvement.</p>
+                </div>
+            </section>
+            <section class="team-cta">
+                <h5 class="team-cta-title">Nimbus gives your team the clarity, speed, and tools they need to win.</h5>
+                <button class="contact-sales-btn">Contact sales</button>
+            </section>
         </main>
+        <footer>
+            <div class="footer-section">
+                <h4>Teams</h4>
+                <a href="">Sales</a>
+                <a href="">Marketing</a>
+                <a href="">HR</a>
+            </div>
+            <div class="footer-section">
+                <h4>Products</h4>
+                <a href="">Standard</a>
+                <a href="">Professional</a>
+                <a href="">Business</a>
+                <a href="">Business Plus</a>
+                <a href="">Enterprise</a>
+            </div>
+            <div class="footer-section">
+                <h4>Company</h4>
+                <a href="">About</a>
+                <a href="">Contact Us</a>
+                <a href="">Privacy & terms</a>
+                <a href="">Cookie policy</a>
+            </div>
+        </footer>
     </body>
 </html>
