added links to other pages

--- a/index.html
+++ b/index.html
@@ -24,14 +24,13 @@
                     <li>
                         <a id="nav-teams-title">Teams</a>
                         <ul id="nav-teams-list">
-                            <li><a href="" class="nav-teams-link">Sales</a></li>
+                            <li><a href="sales.html" class="nav-teams-link">Sales</a></li>
                             <li><a href="" class="nav-teams-link">Marketing</a></li>
                             <li><a href="" class="nav-teams-link">HR</a></li>
                         </ul>
                     </li>
                     <li><a href="">Enterprise</a></li>
                     <li><a href="pricing.html">Pricing</a></li>
-                    <li><a href="">Help Center</a></li>
                 </ul>
             </nav>
         </header>
