--- a/pricing.html
+++ b/pricing.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Nimbus</title>
+        <title>Pricing</title>
         <link rel="stylesheet" href="style.css">
         <script src="script.js" defer></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,38 +13,35 @@
     </head>
     <body>
         <header>
-        <h1 id="nimbus-title"><a href="index.html" id="nimbus-title-link">NIMBUS</a></h1>
-        <nav>
-            <a id="nav-toggle" href="">
-                <span class="nav-bar"></span>
-                <span class="nav-bar"></span>
-                <span class="nav-bar"></span>
-            </a>
-            <ul id="nav-links">
-                <li>
-                    <a id="nav-teams-title">Teams</a>
-                    <ul id="nav-teams-list">
-                        <li><a href="" class="nav-teams-link">Sales</a></li>
-                        <li><a href="" class="nav-teams-link">Marketing</a></li>
-                        <li><a href="" class="nav-teams-link">HR</a></li>
-                    </ul>
-                </li>
-                <li><a href="">Enterprise</a></li>
-                <li><a href="">Pricing</a></li>
-                <li><a href="">Help Center</a></li>
-            </ul>
-        </nav>
-    </header>
+            <h1 id="nimbus-title"><a href="index.html" id="nimbus-title-link">NIMBUS</a></h1>
+            <nav>
+                <a id="nav-toggle" href="">
+                    <span class="nav-bar"></span>
+                    <span class="nav-bar"></span>
+                    <span class="nav-bar"></span>
+                </a>
+                <ul id="nav-links">
+                    <li>
+                        <a id="nav-teams-title">Teams</a>
+                        <ul id="nav-teams-list">
+                            <li><a href="sales.html" class="nav-teams-link">Sales</a></li>
+                            <li><a href="" class="nav-teams-link">Marketing</a></li>
+                            <li><a href="" class="nav-teams-link">HR</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="">Enterprise</a></li>
+                    <li><a href="pricing.html">Pricing</a></li>
+                </ul>
+            </nav>
+        </header>
         <div id="pricing-container">
             <h2 id="pricing-title">Choose the best plan to fit your needs</h2>
             <p id="pricing-paragraph">Simple plans designed for everyone — from freelancers to enterprises. No hidden fees. Bank-grade protection.</p>
             <div id="pricing-type">
                 <p id="pricing-billing-label">Billed:</p>
                 <button class="pricing-btn monthly-pricing-btn">Monthly</button>
-                <div>
-                    <button class="pricing-btn yearly-pricing-btn">Yearly</button>
-                    <p id="pricing-discount">12% off</p>
-                </div>
+                <button class="pricing-btn yearly-pricing-btn">Yearly</button>
+
             </div>
             <main id="card-section">
                 <section class="pricing-card">
