added testimonial section

--- a/sales.html
+++ b/sales.html
@@ -40,7 +40,17 @@
                 <h3 class="banner-title-2">Nimbus helps your sales team work smarter—not harder. Get real-time insights, improve collaboration, and watch your deals move faster than ever.</h3>
                 <button class="contact-sales-btn">Contact sales</button>
             </section>
+            <section class="team-testimonial">
+                <p>“Nimbus has completely transformed the way our sales team works. Before, we were juggling spreadsheets and missing follow-ups. Now, everything is in one place—we can track leads, collaborate across the team, and see exactly where deals stand.”</p>
+                <p>— Jordan Rivera, Sales Manager at Apex Solutions</p>
+            </section>
             <section class="team-feature-container">
+                <h4 class="team-feature-header">Using Nimbus will transform the way your team works</h4>
+                <div class="dot-separator">
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                </div>
                 <div class="team-feature-card">
                     <h4 class="team-feature-title">Lead Management & Tracking</h4>
                     <p class="team-feature-desc">Keep every lead in one place. Track progress, set follow-ups, and never let an opportunity slip through the cracks. Sales reps spend less time hunting for info and more time closing deals.</p>
