added links to footer

--- a/pricing.html
+++ b/pricing.html
@@ -109,16 +109,16 @@
         <footer>
             <div class="footer-section">
                 <h4>Teams</h4>
-                <a href="">Sales</a>
-                <a href="">Marketing</a>
-                <a href="">HR</a>
+                <a href="sales.html">Sales</a>
+                <a href="marketing.html">Marketing</a>
+                <a href="hr.html">HR</a>
             </div>
             <div class="footer-section">
                 <h4>Products</h4>
-                <a href="">Standard</a>
-                <a href="">Professional</a>
-                <a href="">Business</a>
-                <a href="">Business Plus</a>
+                <a href="pricing.html">Standard</a>
+                <a href="pricing.html">Professional</a>
+                <a href="pricing.html">Business</a>
+                <a href="pricing.html">Business Plus</a>
                 <a href="">Enterprise</a>
             </div>
             <div class="footer-section">
