--- a/sales.html
+++ b/sales.html
@@ -25,7 +25,7 @@
                         <a id="nav-teams-title">Teams</a>
                         <ul id="nav-teams-list">
                             <li><a href="sales.html" class="nav-teams-link">Sales</a></li>
-                            <li><a href="" class="nav-teams-link">Marketing</a></li>
+                            <li><a href="marketing.html" class="nav-teams-link">Marketing</a></li>
                             <li><a href="" class="nav-teams-link">HR</a></li>
                         </ul>
                     </li>
@@ -42,7 +42,7 @@
             </section>
             <section class="team-testimonial">
                 <p>“Nimbus has completely transformed the way our sales team works. Before, we were juggling spreadsheets and missing follow-ups. Now, everything is in one place—we can track leads, collaborate across the team, and see exactly where deals stand.”</p>
-                <p>— Jordan Rivera, Sales Manager at Apex Solutions</p>
+                <p><i>— Jordan Rivera, Sales Manager at Apex Solutions</i></p>
             </section>
             <section class="team-feature-container">
                 <h4 class="team-feature-header">Using Nimbus will transform the way your team works</h4>
@@ -72,16 +72,16 @@
         <footer>
             <div class="footer-section">
                 <h4>Teams</h4>
-                <a href="">Sales</a>
-                <a href="">Marketing</a>
-                <a href="">HR</a>
+                <a href="sales.html">Sales</a>
+                <a href="marketing.html">Marketing</a>
+                <a href="hr.html">HR</a>
             </div>
             <div class="footer-section">
                 <h4>Products</h4>
-                <a href="">Standard</a>
-                <a href="">Professional</a>
-                <a href="">Business</a>
-                <a href="">Business Plus</a>
+                <a href="pricing.html">Standard</a>
+                <a href="pricing.html">Professional</a>
+                <a href="pricing.html">Business</a>
+                <a href="pricing.html">Business Plus</a>
                 <a href="">Enterprise</a>
             </div>
             <div class="footer-section">
