--- a/pricing.html
+++ b/pricing.html
@@ -25,8 +25,8 @@
                         <a id="nav-teams-title">Teams</a>
                         <ul id="nav-teams-list">
                             <li><a href="sales.html" class="nav-teams-link">Sales</a></li>
-                            <li><a href="" class="nav-teams-link">Marketing</a></li>
-                            <li><a href="" class="nav-teams-link">HR</a></li>
+                            <li><a href="marketing.html" class="nav-teams-link">Marketing</a></li>
+                            <li><a href="hr.html" class="nav-teams-link">HR</a></li>
                         </ul>
                     </li>
                     <li><a href="">Enterprise</a></li>
