--- a/pricing.html
+++ b/pricing.html
@@ -29,7 +29,7 @@
                             <li><a href="hr.html" class="nav-teams-link">HR</a></li>
                         </ul>
                     </li>
-                    <li><a href="">Enterprise</a></li>
+                    <li><a href="enterprise.html">Enterprise</a></li>
                     <li><a href="pricing.html">Pricing</a></li>
                 </ul>
             </nav>
@@ -119,7 +119,7 @@
                 <a href="pricing.html">Professional</a>
                 <a href="pricing.html">Business</a>
                 <a href="pricing.html">Business Plus</a>
-                <a href="">Enterprise</a>
+                <a href="enterprise.html">Enterprise</a>
             </div>
             <div class="footer-section">
                 <h4>Company</h4>
