started syling each section

--- a/enterprise.html
+++ b/enterprise.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>HR</title>
+        <title>Enterprise</title>
         <link rel="stylesheet" href="style.css">
         <script src="script.js" defer></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -35,7 +35,58 @@
             </nav>
         </header>
         <main>
-
+            <section class="banner-card enterprise-banner">
+                <h2 class="banner-title">Take your corporation to the next level</h2>
+                <p class="banner-title-2">Nimbus gives your organization the tools to work smarter, faster, and more securely — no matter how large your teams grow. From advanced security to custom integrations.</p>
+                <button class="contact-sales-btn">Contact sales</button>
+            </section>
+            <section id="enterprise-features-section">
+                <h3 class="feature-header">How Nimbus helps corporations grow</h3>
+                <div class="dot-separator">
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                </div>
+                <div id="enterprise-features">
+                    <div>
+                        <h4 class="enterprise-feature-title">Custom integrations</h4>
+                        <p class="enterprise-feature-desc">Connects with the software your enterprise already uses</p>
+                    </div>
+                    <div>
+                        <h4>Scales seamlessly</h4>
+                        <p>Whether you have 500 or 50,000 employees, Nimbus adapts to your structure</p>
+                    </div>
+                    <div>
+                        <h4>Automates workflows</h4>
+                        <p>Cuts down repetitive tasks so teams can focus on strategy, not admin</p>
+                    </div>
+                    <div>
+                        <h4>Strengthens security & compliance</h4>
+                        <p>Built-in enterprise-grade security, GDPR & SOC 2 ready</p>
+                    </div>
+                    <div>
+                        <h4>Boosts productivity</h4>
+                        <p>Reduces tool-switching with everything in one connected platform</p>
+                    </div>
+                    <div>
+                        <h4>Data-driven insights</h4>
+                        <p>Advanced analytics highlight trends, bottlenecks, and growth opportunities</p>
+                    </div>
+                </div>
+            </section>
+            <section>
+                <h3>See what we've done</h3>
+                <div>
+                    <h4>Enterprises reported a 25% increase in productivity within the first 6 months</h4>
+                    <h4>Large enterprises saw a 35% improvement in data accuracy</h4>
+                    <h4>Reduced average response time on client requests by 4 hours</h4>
+                    <h4>Helped teams launch campaigns 3 weeks faster than before</h4>
+                </div>
+            </section>
+            <section>
+                <h3>Discover what Nimbus can do for you</h3>
+                <button class="contact-sales-btn">Contact sales</button>
+            </section>
         </main>
         <footer>
             <div class="footer-section">
