changed class names so they align with enterprise page

--- a/hr.html
+++ b/hr.html
@@ -45,7 +45,7 @@
                 <p><i>— Maya Lopez, Director of People & Culture at Brightline</i></p>
             </section>
             <section class="team-feature-container">
-                <h4 class="team-feature-header">Empower your people with Nimbus HR</h4>
+                <h4 class="feature-header">Empower your people with Nimbus HR</h4>
                 <div class="dot-separator">
                     <span class="dot"></span>
                     <span class="dot"></span>
