--- a/marketing.html
+++ b/marketing.html
@@ -45,7 +45,7 @@
                 <p><i>— Jordan Kim, Head of Marketing at Elevate Brands</i></p>
             </section>
             <section class="team-feature-container">
-                <h4 class="team-feature-header">Where your marketing team's creativity meets flawless execution</h4>
+                <h4 class="feature-header">Where your marketing team's creativity meets flawless execution</h4>
                 <div class="dot-separator">
                     <span class="dot"></span>
                     <span class="dot"></span>
