--- a/sales.html
+++ b/sales.html
@@ -45,7 +45,7 @@
                 <p><i>— Jordan Rivera, Sales Manager at Apex Solutions</i></p>
             </section>
             <section class="team-feature-container">
-                <h4 class="team-feature-header">Using Nimbus will transform the way your team works</h4>
+                <h4 class="feature-header">Using Nimbus will transform the way your team works</h4>
                 <div class="dot-separator">
                     <span class="dot"></span>
                     <span class="dot"></span>
